--- a/hotelproject.css
+++ b/hotelproject.css
@@ -1,12 +1,21 @@
+#div{
+  width:90%;
+}
 #divbox{
-  width:210px;
-  height:210px;
-  position: absolute;
-  top: 70px;
-  left: 90px;
+  width:20%;
+  display: inline-block;
+  padding: 2px;
+  margin: 11px;
   background-color: orange;
+  padding:10px;
 }
 
 #inputstyle{
-  
+  width: 150px;
+  position: absolute;
+}
+
+
+#user{
+  color: black;
 }
