--- a/hotelproject.css
+++ b/hotelproject.css
@@ -1,14 +1,6 @@
 #div{
   width:90%;
 }
-#divbox{
-  width: 21%;
-  display: inline-block;
-  padding: 10%;
-  margin: 30px;
-  background-color: orange;
-  padding:10px;
-}
 
 #inputstyle{
   width: 150px;
@@ -18,4 +10,23 @@
 
 #user{
   color: black;
+}
+
+
+#room1{
+  width: 21%;
+  display: inline-block;
+  padding: 10%;
+  margin: 30px;
+  background-color: orange;
+  padding:10px;
+}
+
+#room2{
+  width: 21%;
+  display: inline-block;
+  padding: 10%;
+  margin: 30px;
+  background-color: orange;
+  padding:10px;
 }
