--- a/hotelproject.css
+++ b/hotelproject.css
@@ -18,7 +18,7 @@
   display: inline-block;
   padding: 10%;
   margin: 30px;
-  background-color: orange;
+  background-color: pink;
   padding:10px;
 }
 
@@ -27,6 +27,6 @@
   display: inline-block;
   padding: 10%;
   margin: 30px;
-  background-color: orange;
+  background-color: pink;
   padding:10px;
 }
