--- a/hotelproject.css
+++ b/hotelproject.css
@@ -13,8 +13,10 @@
 }
 
 
-#room1{
+.room{
   width: 21%;
+  height: 48%;
+  float: left;
   display: inline-block;
   padding: 10%;
   margin: 30px;
@@ -22,11 +24,8 @@
   padding:10px;
 }
 
-#room2{
-  width: 21%;
-  display: inline-block;
-  padding: 10%;
-  margin: 30px;
-  background-color: pink;
-  padding:10px;
+.mydiv {
+  width: 70%;
+  position: absolute;
+
 }
