--- a/hotelproject.css
+++ b/hotelproject.css
@@ -1,28 +1,19 @@
-#inputstyle{
-  width: 10px;
-  position: absolute;
-}
+
 
 #user{
   color: black;
 }
 
-.headerdiv{
-  width: 100%;
-  height: 30%;
-  background-color: yellow
-}
 
-#header{
+#background{
   width: 100%;
-  margin: 0px, auto;
-  padding: 0px;
-  float: left;
+  z-index: 1;
+  position:absolute;
 }
 
 #logo{
-  width: 30%;
-  float: left;
+  width: 23%;
+  position: relative;
 }
 
 .room{
@@ -34,12 +25,14 @@
   margin: 20px;
   background-color: pink;
   overflow: auto;
+  position: relative;
 }
 
 .mydiv {
   width: 70%;
-  position: static;
-
+  position: relative;
+  z-index: 5;
+  opacity: 0.85;
 }
 
 #guestlist{
