--- a/hotelproject.css
+++ b/hotelproject.css
@@ -57,18 +57,19 @@
 
 .room{
   width: 20%;
-  height: 40%;
+  height: 43%;
   float: left;
   display: inline-block;
   padding: 10px;
-  margin: 25px;
-  background-color: pink;
+  margin: 20px;
+  background-color: #FFD3D3;
   overflow: auto;
   position: relative;
 }
 
 .mydiv {
   width: 100%;
+  height: 100%;
   position: relative;
   z-index: 1;
   opacity: 0.85;
@@ -80,13 +81,13 @@
 
 #guestlist{
   width: 45%;
-  height: 40%;
+  height: 42%;
   float: right;
   right: 2%;
-  top: 3%;
-  position: relative;
+  top: 57%;
+  position: absolute;
   padding: 10px;
-  background-color: lightblue;
+  background-color: #C4DEFF;
   overflow: auto;
 }
 
